--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,34 @@
 body{
 	text-align: center;
-	background-color: Black;	
+	background-color: black;	
+	font-family: Verdana;
 }
 
+
 h1{
-	font-family: Verdana;
 	font-weight: Normal;
 	font-size: 50px;
 	color: white;
 	text-align: center;	
+}
+
+h2{
+	font-weight: 300;
+	font-size: 42px;
+	color: white;
+}
+
+h3{
+	color: gray;
+	font-size: 21px;
+}
+
+a{
+	font-size: 16px;
+	color: aquamarine;
+}
+
+footer p{
+	text-align: right;
+	color: gray;
 }
